--- a/config/database.yml
+++ b/config/database.yml
@@ -1,4 +1,3 @@
-
 development:
   adapter: postgresql
   encoding: unicode
@@ -11,6 +10,14 @@ test:
   adapter: postgresql
   encoding: unicode
   database: mnemonic_test
+  pool: 5
+  username: railsapp
+  password:
+
+test:
+  adapter: postgresql
+  encoding: unicode
+  database: mnemonic_production
   pool: 5
   username: railsapp
   password:
